# Female-language

./: CMakeLists.txt  README.md  Untitled1.save  assembler.cpp  assembler.cpp.save  assembler.h  back.cpp  back.txt  code.ttx  code.txt  command_set.cpp.save  directory.txt  dynamic_array.cpp  dynamic_array.cpp.save  dynamic_array.h  fib (2).txt  front.bat  front.cpp  front.cpp.save  front.h  gramma.txt  log.h  main.cpp  main.cpp.save  note.txt  processor.cpp  processor.cpp.save  recurs_des.cpp  recurs_des.cpp.save  recurs_des.h  stack.cpp.save  start.txt  test.txt  tree.dot  Женский язык.md
benchmark/: bench  bench.cpp
e2e_test/: CMakeLists.txt  funcs.hpp  tests.cpp
front/: asm.txt  assembler.cpp  assembler.h  back.cpp  back.cpp.save  back.h  back.txt  code.txt  comand_code.h  dack.txt  directory.txt  dynamic_array.cpp  dynamic_array.h  factorial.txt  front.bat  front.cpp  front.cpp.save  front.h  front.h.save  midl.cpp  midl.h  note.txt  proc.bat  proc_main.cpp  processor.cpp  ram.txt  recurs_des.cpp  recurs_des.cpp.save  recurs_des.h  recurs_des.h.save  start.txt  tree.dot
include/: bitsort.hpp  ocl.hpp
includes/: command_set.cpp  dynamic_array.h  my_program.cpp  my_program.h
kernels/: bitonic_sort.cl
logs/refs/heads/: master
parts/: back.cpp  back.txt  front.bat  front.cpp  front.h  midl.cpp  midl.h  recurs_des.cpp
pr/: code.txt  stack.h
proc/: asm.bat  assembler.cpp  assembler.h  back.txt  code.txt  proc.bat  processor.h
tests/: generate_data.py  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
